--- a/model/training.ipynb
+++ b/model/training.ipynb
@@ -1546,19 +1546,85 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 113,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "team\n",
+       "AFG    1.000000\n",
+       "ALG    1.000000\n",
+       "ARG    0.853659\n",
+       "ARM    0.428571\n",
+       "AUS    0.367347\n",
+       "         ...   \n",
+       "USA    0.126953\n",
+       "UZB    0.625000\n",
+       "VEN    1.750000\n",
+       "VIE    1.000000\n",
+       "ZIM         inf\n",
+       "Length: 102, dtype: float64"
+      ]
+     },
+     "execution_count": 113,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "import numpy as np "
+    "error_ratio[~pd.isnull(error_ratio)]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 116,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "error_ratio = error_ratio[np.isfinite(error_ratio)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "team\n",
+       "AFG    1.000000\n",
+       "ALG    1.000000\n",
+       "ARG    0.853659\n",
+       "ARM    0.428571\n",
+       "AUS    0.367347\n",
+       "         ...   \n",
+       "UKR    0.951220\n",
+       "USA    0.126953\n",
+       "UZB    0.625000\n",
+       "VEN    1.750000\n",
+       "VIE    1.000000\n",
+       "Length: 97, dtype: float64"
+      ]
+     },
+     "execution_count": 118,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "error_ratio"
+   ]
   }
  ],
  "metadata": {
